Fixed mobile nav visibility

--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,8 @@ header {
     padding: 1rem 3rem;
     width: initial !important;
     z-index: 2;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .hamburguer__menu::before {
